2006-03-11  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: libbonobo branched.

2006-03-09  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: branch evolution, evolution-data-server, 
	evolution-exchange and gtkhtml for gnome-2-14.

2006-02-12  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Moved new modules according to final
	module list from proposed to desktop, and the rest to extras.

2006-02-12  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-icon-theme has
	been branched for gnome-2-14.

2006-02-08  Funda Wang  <fundawang@linux.net.cn>

	* translation-status.xml: evolution-jescs should be in 2.6 series.

2006-02-06  Funda Wang  <fundawang@linux.net.cn>

	* translation-status.xml: gnome-utils has been branched for
	gnome-2-14.

2006-02-03  Funda Wang  <fundawang@linux.net.cn>

	* translation-status.xml: Added NetworkManager-openvpn component.

2006-02-02  Vincent van Adrighem  <adrighem@gnome.org>

	* translation-status.xml: libgnomeui has been branched for gnome-2-14.

2006-02-01  Funda Wang  <fundawang@linux.net.cn>

	* translation-status.xml: dasher has been branched for gnome-2-14.

2006-01-26  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: procman has been renamed to
	gnome-system-monitor.

2006-01-20  Funda Wang  <fundawang@linux.net.cn>

	* translation-status.xml: gnomemeeting has changed its cvs dir
	to ekiga.
	
2006-01-14  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-menus, vino, and gnome-media
	have been branched for gnome-2-12.

2006-01-13  Gabor Kelemen  <kelemeng@gnome.hu>

	* translation-status.xml: changed POT names: 
	  gnomemeeting POT name to ekiga.
 	  evolution-jescs POT name to contain version number 2.4.
 	  libgnomedb and libgda POT names tocontain version number 3.

2006-01-07  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gconf-editor and bug-buddy have
	been branched for gnome-2-12.
