@@ -318,7 +318,7 @@
       <component name="deskbar-applet" dir="deskbar-applet" group="desktop">
         <podir dir="po"/>
         <potname name="deskbar-applet.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-14"/>
         <regenerate/>
         <download/>
       </component>
@@ -455,7 +455,7 @@
       <component name="epiphany" dir="epiphany" group="desktop">
         <podir dir="po"/>
         <potname name="epiphany.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-14"/>
         <regenerate/>
         <download/>
       </component>
@@ -466,7 +466,7 @@
       <component name="epiphany-extensions" dir="epiphany-extensions" group="extras">
         <podir dir="po"/>
         <potname name="epiphany-extensions-1.10.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-14"/>
         <regenerate/>
         <download/>
       </component>
@@ -2016,7 +2016,7 @@
       <component name="gucharmap" dir="gucharmap" group="desktop">
         <podir dir="po"/>
         <potname name="gucharmap.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-14"/>
         <regenerate/>
         <download/>
       </component>
@@ -3053,7 +3053,7 @@
       <component name="yelp" dir="yelp" group="desktop">
         <podir dir="po"/>
         <potname name="yelp.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-14"/>
         <regenerate/>
         <download/>
       </component>
