@@ -1,3 +1,8 @@
+2006-03-13  Danilo Šegan  <danilo@gnome.org>
+
+	* translation-status.xml: epiphany, epiphany-extensions,
+	deskbar-applet, yelp, gucharmap branched with gnome-2-14.
+
 2006-03-11  Danilo Šegan  <danilo@gnome.org>
 
 	* translation-status.xml: libbonobo branched.
